# alot

./: README.md
backend/: .gitignore  Cargo.toml
backend/src/: jwt.rs  lib.rs  main.rs
frontend/: drizzle.config.json  package-lock.json  package.json  tailwind.config.js
frontend/drizzle/: 0000_warm_miracleman.sql
frontend/drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/src/: app.html  hooks.server.ts
frontend/src/components/: Navigation.svelte
frontend/src/lib/server/: db.ts  schema.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/login/: +page.server.ts  +page.svelte
