[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pwhash = "1.0.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
jsonwebtoken = "9.2.0"
chrono = "0.4.34"
axum-extra = { version = "0.9.2", features = ["typed-header"] }